add sprint 3